# setserial

./: .gitignore  Cargo.toml
src/: main.rs
testdata/: serial.txt
